# applied-ai-engineer-journey

./: .gitignore  README.md
.github/workflows/: sync_to_hf.yml
learnings/01_basic_chatbot/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
learnings/01_basic_chatbot/.github/workflow/: sync_to_hf.yml
learnings/01_basic_chatbot/app/: main.py
learnings/01_basic_chatbot/app/api/: chat_router.py
learnings/01_basic_chatbot/app/chatbot_agent/: basic_chatbot_graph.py
learnings/01_basic_chatbot/app/core/: config.py
learnings/01_basic_chatbot/app/models/: chat_request.py
learnings/01_simple_bot/: .env  all_code.txt  pyproject.toml  requirement.txt
learnings/01_simple_bot/app/: main.py
learnings/01_simple_bot/app/agents/basic_bot/: basic_bot_graph.py
learnings/01_simple_bot/app/api/: router.py
learnings/01_simple_bot/app/core/: agent_state.py  config.py
learnings/01_simple_bot/app/models/: request_model.py  response_model.py
learnings/02_chatbot_with_memory_in_txt_file/: pyproject.toml  requirement.txt
learnings/02_chatbot_with_memory_in_txt_file/app/: main.py
learnings/02_chatbot_with_memory_in_txt_file/app/agent/chatbot_with_memory/: chatbot_graph.py
learnings/02_chatbot_with_memory_in_txt_file/app/api/: router.py
learnings/02_chatbot_with_memory_in_txt_file/app/core/: agent_state.py  config.py  connection_pool.py
learnings/02_chatbot_with_memory_in_txt_file/app/models/: request_model.py  response_model.py
projects/AI Travel Planner Agent/: requirements.txt
projects/AI Travel Planner Agent/app/: main.py
(+5 files in other folders)
